// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should parse valid 1`] = `
AllTimeStats {
  "SAD": "2022-08-28",
  "SAH1": 1.01,
  "SAH2": 2.02,
  "SAH3": 3.03,
  "SAH4": 4.04,
  "SAL1": 5.05,
  "SAL2": 6.06,
  "SAL3": 7.07,
  "SAL4": 8.08,
  "SAP1": 9.09,
  "SAP2": 10.1,
  "SAP3": 11.11,
  "SAP4": 12.12,
  "SAS1": 13.13,
  "SAS2": 14.14,
  "SAS3": 15.15,
  "SAS4": 16.16,
}
`;

exports[`should reject invalid 1`] = `
[
  ValidationError {
    "children": [],
    "constraints": {
      "isDefined": "stat_alltime should not be null or undefined",
    },
    "property": "stat_alltime",
    "target": AllTimeStatsShape {},
    "value": undefined,
  },
]
`;

exports[`should reject invalid 2`] = `
[
  ValidationError {
    "children": [
      ValidationError {
        "children": [],
        "constraints": {
          "isDateString": "SAD must be a valid ISO 8601 date string",
          "isDefined": "SAD should not be null or undefined",
        },
        "property": "SAD",
        "target": AllTimeStats {},
        "value": undefined,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isDefined": "SAS1 should not be null or undefined",
          "isNumber": "SAS1 must be a number conforming to the specified constraints",
        },
        "property": "SAS1",
        "target": AllTimeStats {},
        "value": undefined,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isDefined": "SAH1 should not be null or undefined",
          "isNumber": "SAH1 must be a number conforming to the specified constraints",
        },
        "property": "SAH1",
        "target": AllTimeStats {},
        "value": undefined,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isDefined": "SAL1 should not be null or undefined",
          "isNumber": "SAL1 must be a number conforming to the specified constraints",
        },
        "property": "SAL1",
        "target": AllTimeStats {},
        "value": undefined,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isDefined": "SAP1 should not be null or undefined",
          "isNumber": "SAP1 must be a number conforming to the specified constraints",
        },
        "property": "SAP1",
        "target": AllTimeStats {},
        "value": undefined,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isDefined": "SAS2 should not be null or undefined",
          "isNumber": "SAS2 must be a number conforming to the specified constraints",
        },
        "property": "SAS2",
        "target": AllTimeStats {},
        "value": undefined,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isDefined": "SAH2 should not be null or undefined",
          "isNumber": "SAH2 must be a number conforming to the specified constraints",
        },
        "property": "SAH2",
        "target": AllTimeStats {},
        "value": undefined,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isDefined": "SAL2 should not be null or undefined",
          "isNumber": "SAL2 must be a number conforming to the specified constraints",
        },
        "property": "SAL2",
        "target": AllTimeStats {},
        "value": undefined,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isDefined": "SAP2 should not be null or undefined",
          "isNumber": "SAP2 must be a number conforming to the specified constraints",
        },
        "property": "SAP2",
        "target": AllTimeStats {},
        "value": undefined,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isDefined": "SAS3 should not be null or undefined",
          "isNumber": "SAS3 must be a number conforming to the specified constraints",
        },
        "property": "SAS3",
        "target": AllTimeStats {},
        "value": undefined,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isDefined": "SAH3 should not be null or undefined",
          "isNumber": "SAH3 must be a number conforming to the specified constraints",
        },
        "property": "SAH3",
        "target": AllTimeStats {},
        "value": undefined,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isDefined": "SAL3 should not be null or undefined",
          "isNumber": "SAL3 must be a number conforming to the specified constraints",
        },
        "property": "SAL3",
        "target": AllTimeStats {},
        "value": undefined,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isDefined": "SAP3 should not be null or undefined",
          "isNumber": "SAP3 must be a number conforming to the specified constraints",
        },
        "property": "SAP3",
        "target": AllTimeStats {},
        "value": undefined,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isDefined": "SAS4 should not be null or undefined",
          "isNumber": "SAS4 must be a number conforming to the specified constraints",
        },
        "property": "SAS4",
        "target": AllTimeStats {},
        "value": undefined,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isDefined": "SAH4 should not be null or undefined",
          "isNumber": "SAH4 must be a number conforming to the specified constraints",
        },
        "property": "SAH4",
        "target": AllTimeStats {},
        "value": undefined,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isDefined": "SAL4 should not be null or undefined",
          "isNumber": "SAL4 must be a number conforming to the specified constraints",
        },
        "property": "SAL4",
        "target": AllTimeStats {},
        "value": undefined,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isDefined": "SAP4 should not be null or undefined",
          "isNumber": "SAP4 must be a number conforming to the specified constraints",
        },
        "property": "SAP4",
        "target": AllTimeStats {},
        "value": undefined,
      },
    ],
    "property": "stat_alltime",
    "target": AllTimeStatsShape {
      "stat_alltime": AllTimeStats {},
    },
    "value": AllTimeStats {},
  },
]
`;

exports[`should reject invalid 3`] = `
[
  ValidationError {
    "children": [
      ValidationError {
        "children": [],
        "constraints": {
          "isDateString": "SAD must be a valid ISO 8601 date string",
        },
        "property": "SAD",
        "target": AllTimeStats {
          "SAD": "invalid date",
          "SAH1": NaN,
          "SAH2": NaN,
          "SAH3": NaN,
          "SAH4": NaN,
          "SAL1": NaN,
          "SAL2": NaN,
          "SAL3": NaN,
          "SAL4": NaN,
          "SAP1": NaN,
          "SAP2": NaN,
          "SAP3": NaN,
          "SAP4": NaN,
          "SAS1": NaN,
          "SAS2": NaN,
          "SAS3": NaN,
          "SAS4": NaN,
        },
        "value": "invalid date",
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isNumber": "SAS1 must be a number conforming to the specified constraints",
        },
        "property": "SAS1",
        "target": AllTimeStats {
          "SAD": "invalid date",
          "SAH1": NaN,
          "SAH2": NaN,
          "SAH3": NaN,
          "SAH4": NaN,
          "SAL1": NaN,
          "SAL2": NaN,
          "SAL3": NaN,
          "SAL4": NaN,
          "SAP1": NaN,
          "SAP2": NaN,
          "SAP3": NaN,
          "SAP4": NaN,
          "SAS1": NaN,
          "SAS2": NaN,
          "SAS3": NaN,
          "SAS4": NaN,
        },
        "value": NaN,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isNumber": "SAH1 must be a number conforming to the specified constraints",
        },
        "property": "SAH1",
        "target": AllTimeStats {
          "SAD": "invalid date",
          "SAH1": NaN,
          "SAH2": NaN,
          "SAH3": NaN,
          "SAH4": NaN,
          "SAL1": NaN,
          "SAL2": NaN,
          "SAL3": NaN,
          "SAL4": NaN,
          "SAP1": NaN,
          "SAP2": NaN,
          "SAP3": NaN,
          "SAP4": NaN,
          "SAS1": NaN,
          "SAS2": NaN,
          "SAS3": NaN,
          "SAS4": NaN,
        },
        "value": NaN,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isNumber": "SAL1 must be a number conforming to the specified constraints",
        },
        "property": "SAL1",
        "target": AllTimeStats {
          "SAD": "invalid date",
          "SAH1": NaN,
          "SAH2": NaN,
          "SAH3": NaN,
          "SAH4": NaN,
          "SAL1": NaN,
          "SAL2": NaN,
          "SAL3": NaN,
          "SAL4": NaN,
          "SAP1": NaN,
          "SAP2": NaN,
          "SAP3": NaN,
          "SAP4": NaN,
          "SAS1": NaN,
          "SAS2": NaN,
          "SAS3": NaN,
          "SAS4": NaN,
        },
        "value": NaN,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isNumber": "SAP1 must be a number conforming to the specified constraints",
        },
        "property": "SAP1",
        "target": AllTimeStats {
          "SAD": "invalid date",
          "SAH1": NaN,
          "SAH2": NaN,
          "SAH3": NaN,
          "SAH4": NaN,
          "SAL1": NaN,
          "SAL2": NaN,
          "SAL3": NaN,
          "SAL4": NaN,
          "SAP1": NaN,
          "SAP2": NaN,
          "SAP3": NaN,
          "SAP4": NaN,
          "SAS1": NaN,
          "SAS2": NaN,
          "SAS3": NaN,
          "SAS4": NaN,
        },
        "value": NaN,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isNumber": "SAS2 must be a number conforming to the specified constraints",
        },
        "property": "SAS2",
        "target": AllTimeStats {
          "SAD": "invalid date",
          "SAH1": NaN,
          "SAH2": NaN,
          "SAH3": NaN,
          "SAH4": NaN,
          "SAL1": NaN,
          "SAL2": NaN,
          "SAL3": NaN,
          "SAL4": NaN,
          "SAP1": NaN,
          "SAP2": NaN,
          "SAP3": NaN,
          "SAP4": NaN,
          "SAS1": NaN,
          "SAS2": NaN,
          "SAS3": NaN,
          "SAS4": NaN,
        },
        "value": NaN,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isNumber": "SAH2 must be a number conforming to the specified constraints",
        },
        "property": "SAH2",
        "target": AllTimeStats {
          "SAD": "invalid date",
          "SAH1": NaN,
          "SAH2": NaN,
          "SAH3": NaN,
          "SAH4": NaN,
          "SAL1": NaN,
          "SAL2": NaN,
          "SAL3": NaN,
          "SAL4": NaN,
          "SAP1": NaN,
          "SAP2": NaN,
          "SAP3": NaN,
          "SAP4": NaN,
          "SAS1": NaN,
          "SAS2": NaN,
          "SAS3": NaN,
          "SAS4": NaN,
        },
        "value": NaN,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isNumber": "SAL2 must be a number conforming to the specified constraints",
        },
        "property": "SAL2",
        "target": AllTimeStats {
          "SAD": "invalid date",
          "SAH1": NaN,
          "SAH2": NaN,
          "SAH3": NaN,
          "SAH4": NaN,
          "SAL1": NaN,
          "SAL2": NaN,
          "SAL3": NaN,
          "SAL4": NaN,
          "SAP1": NaN,
          "SAP2": NaN,
          "SAP3": NaN,
          "SAP4": NaN,
          "SAS1": NaN,
          "SAS2": NaN,
          "SAS3": NaN,
          "SAS4": NaN,
        },
        "value": NaN,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isNumber": "SAP2 must be a number conforming to the specified constraints",
        },
        "property": "SAP2",
        "target": AllTimeStats {
          "SAD": "invalid date",
          "SAH1": NaN,
          "SAH2": NaN,
          "SAH3": NaN,
          "SAH4": NaN,
          "SAL1": NaN,
          "SAL2": NaN,
          "SAL3": NaN,
          "SAL4": NaN,
          "SAP1": NaN,
          "SAP2": NaN,
          "SAP3": NaN,
          "SAP4": NaN,
          "SAS1": NaN,
          "SAS2": NaN,
          "SAS3": NaN,
          "SAS4": NaN,
        },
        "value": NaN,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isNumber": "SAS3 must be a number conforming to the specified constraints",
        },
        "property": "SAS3",
        "target": AllTimeStats {
          "SAD": "invalid date",
          "SAH1": NaN,
          "SAH2": NaN,
          "SAH3": NaN,
          "SAH4": NaN,
          "SAL1": NaN,
          "SAL2": NaN,
          "SAL3": NaN,
          "SAL4": NaN,
          "SAP1": NaN,
          "SAP2": NaN,
          "SAP3": NaN,
          "SAP4": NaN,
          "SAS1": NaN,
          "SAS2": NaN,
          "SAS3": NaN,
          "SAS4": NaN,
        },
        "value": NaN,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isNumber": "SAH3 must be a number conforming to the specified constraints",
        },
        "property": "SAH3",
        "target": AllTimeStats {
          "SAD": "invalid date",
          "SAH1": NaN,
          "SAH2": NaN,
          "SAH3": NaN,
          "SAH4": NaN,
          "SAL1": NaN,
          "SAL2": NaN,
          "SAL3": NaN,
          "SAL4": NaN,
          "SAP1": NaN,
          "SAP2": NaN,
          "SAP3": NaN,
          "SAP4": NaN,
          "SAS1": NaN,
          "SAS2": NaN,
          "SAS3": NaN,
          "SAS4": NaN,
        },
        "value": NaN,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isNumber": "SAL3 must be a number conforming to the specified constraints",
        },
        "property": "SAL3",
        "target": AllTimeStats {
          "SAD": "invalid date",
          "SAH1": NaN,
          "SAH2": NaN,
          "SAH3": NaN,
          "SAH4": NaN,
          "SAL1": NaN,
          "SAL2": NaN,
          "SAL3": NaN,
          "SAL4": NaN,
          "SAP1": NaN,
          "SAP2": NaN,
          "SAP3": NaN,
          "SAP4": NaN,
          "SAS1": NaN,
          "SAS2": NaN,
          "SAS3": NaN,
          "SAS4": NaN,
        },
        "value": NaN,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isNumber": "SAP3 must be a number conforming to the specified constraints",
        },
        "property": "SAP3",
        "target": AllTimeStats {
          "SAD": "invalid date",
          "SAH1": NaN,
          "SAH2": NaN,
          "SAH3": NaN,
          "SAH4": NaN,
          "SAL1": NaN,
          "SAL2": NaN,
          "SAL3": NaN,
          "SAL4": NaN,
          "SAP1": NaN,
          "SAP2": NaN,
          "SAP3": NaN,
          "SAP4": NaN,
          "SAS1": NaN,
          "SAS2": NaN,
          "SAS3": NaN,
          "SAS4": NaN,
        },
        "value": NaN,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isNumber": "SAS4 must be a number conforming to the specified constraints",
        },
        "property": "SAS4",
        "target": AllTimeStats {
          "SAD": "invalid date",
          "SAH1": NaN,
          "SAH2": NaN,
          "SAH3": NaN,
          "SAH4": NaN,
          "SAL1": NaN,
          "SAL2": NaN,
          "SAL3": NaN,
          "SAL4": NaN,
          "SAP1": NaN,
          "SAP2": NaN,
          "SAP3": NaN,
          "SAP4": NaN,
          "SAS1": NaN,
          "SAS2": NaN,
          "SAS3": NaN,
          "SAS4": NaN,
        },
        "value": NaN,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isNumber": "SAH4 must be a number conforming to the specified constraints",
        },
        "property": "SAH4",
        "target": AllTimeStats {
          "SAD": "invalid date",
          "SAH1": NaN,
          "SAH2": NaN,
          "SAH3": NaN,
          "SAH4": NaN,
          "SAL1": NaN,
          "SAL2": NaN,
          "SAL3": NaN,
          "SAL4": NaN,
          "SAP1": NaN,
          "SAP2": NaN,
          "SAP3": NaN,
          "SAP4": NaN,
          "SAS1": NaN,
          "SAS2": NaN,
          "SAS3": NaN,
          "SAS4": NaN,
        },
        "value": NaN,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isNumber": "SAL4 must be a number conforming to the specified constraints",
        },
        "property": "SAL4",
        "target": AllTimeStats {
          "SAD": "invalid date",
          "SAH1": NaN,
          "SAH2": NaN,
          "SAH3": NaN,
          "SAH4": NaN,
          "SAL1": NaN,
          "SAL2": NaN,
          "SAL3": NaN,
          "SAL4": NaN,
          "SAP1": NaN,
          "SAP2": NaN,
          "SAP3": NaN,
          "SAP4": NaN,
          "SAS1": NaN,
          "SAS2": NaN,
          "SAS3": NaN,
          "SAS4": NaN,
        },
        "value": NaN,
      },
      ValidationError {
        "children": [],
        "constraints": {
          "isNumber": "SAP4 must be a number conforming to the specified constraints",
        },
        "property": "SAP4",
        "target": AllTimeStats {
          "SAD": "invalid date",
          "SAH1": NaN,
          "SAH2": NaN,
          "SAH3": NaN,
          "SAH4": NaN,
          "SAL1": NaN,
          "SAL2": NaN,
          "SAL3": NaN,
          "SAL4": NaN,
          "SAP1": NaN,
          "SAP2": NaN,
          "SAP3": NaN,
          "SAP4": NaN,
          "SAS1": NaN,
          "SAS2": NaN,
          "SAS3": NaN,
          "SAS4": NaN,
        },
        "value": NaN,
      },
    ],
    "property": "stat_alltime",
    "target": AllTimeStatsShape {
      "stat_alltime": AllTimeStats {
        "SAD": "invalid date",
        "SAH1": NaN,
        "SAH2": NaN,
        "SAH3": NaN,
        "SAH4": NaN,
        "SAL1": NaN,
        "SAL2": NaN,
        "SAL3": NaN,
        "SAL4": NaN,
        "SAP1": NaN,
        "SAP2": NaN,
        "SAP3": NaN,
        "SAP4": NaN,
        "SAS1": NaN,
        "SAS2": NaN,
        "SAS3": NaN,
        "SAS4": NaN,
      },
    },
    "value": AllTimeStats {
      "SAD": "invalid date",
      "SAH1": NaN,
      "SAH2": NaN,
      "SAH3": NaN,
      "SAH4": NaN,
      "SAL1": NaN,
      "SAL2": NaN,
      "SAL3": NaN,
      "SAL4": NaN,
      "SAP1": NaN,
      "SAP2": NaN,
      "SAP3": NaN,
      "SAP4": NaN,
      "SAS1": NaN,
      "SAS2": NaN,
      "SAS3": NaN,
      "SAS4": NaN,
    },
  },
]
`;
